feat: Inventory + Sales modules, Postgres, DB constraints, seeds, RBAC models

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,5 +3,8 @@ SECRET_KEY=change-me
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin
 
-# Database (dev)
-DATABASE_URL=sqlite:///./data/app.db
+# Database (dev - choose one)
+# SQLite:
+# DATABASE_URL=sqlite:///./data/app.db
+# Postgres:
+DATABASE_URL=postgresql://openerp:openerp_dev@localhost:5432/openerp
