--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,6 +1,7 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = sqlite:///./data/app.db
+# sqlalchemy.url is read from env.py via DATABASE_URL environment variable
+# sqlalchemy.url = sqlite:///./data/app.db
 
 [loggers]
 keys = root,sqlalchemy,alembic
