--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,6 @@ pytest==8.3.3
 requests==2.32.3
 alembic==1.14.0
 psycopg2-binary==2.9.10
+bcrypt==4.2.1
+fastapi==0.115.5
+uvicorn[standard]==0.32.0
